<resources>
    <string name="app_name">Timeview</string>
    <!--TODO nome do app-->

    <string name="nav_item_clocks">Clocks</string>
    <string name="nav_item_calendars">Lifetime</string>
    <string name="nav_item_pref">Preferences</string>

    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>

    <string name="pref_title_username">Your name</string>
    <string name="pref_title_birthday">Your birthday</string>
    <string name="pref_title_years">Reference life years</string>
    <string name="pref_summary_birthday">Set to see your own time perspective</string>
    <string name="pref_summary_years">Number of years to show in your life time perspective</string>

    <string name="hour">hour</string>
    <string name="day">day</string>
    <string name="week">week</string>
    <string name="month">month</string>
    <string name="year">year</string>

    <string name="hours">hours</string>
    <string name="days">days</string>
    <string name="weeks">weeks</string>
    <string name="months">months</string>
    <string name="years">years</string>

    <string name="your_life_in_message">Your life in</string>
    <string name="your_life_clock_message">Your life clock</string>
    <string name="life_in_years_message">Your life in years</string>
    <string name="life_in_months_message">Your life in months</string>
    <string name="this_is_the_message">This is the</string>
    <string name="of_your_life_message">of your life</string>
    <string name="set_birthday_message">Birthday</string>
    <string name="birthday_req_message">Please, set your birthday so we can calculate your lifetime.</string>
    <string name="done_message">Done</string>
    <string name="minutes">min</string>

</resources>
