<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="0dp"
    android:layout_margin="0dp"
    android:fitsSystemWindows="true">

    <android.support.v7.widget.CardView
        android:id="@+id/card_life_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="16dp"
            android:paddingBottom="24dp">

            <TextView
                style="@style/AppTheme.Headline"
                android:id="@+id/text_life_years"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/text_life_months" />

            <TextView
                style="@style/AppTheme.Headline"
                android:id="@+id/text_life_months"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintRight_toLeftOf="@id/text_life_days"
                app:layout_constraintLeft_toRightOf="@+id/text_life_years" />

            <TextView
                style="@style/AppTheme.Headline"
                android:id="@+id/text_life_days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintRight_toLeftOf="@id/text_life_hours"
                app:layout_constraintLeft_toRightOf="@+id/text_life_months" />

            <TextView
                style="@style/AppTheme.Headline"
                android:id="@+id/text_life_hours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/text_life_days" />

            <TextView
                style="@style/AppTheme.CaptionLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/years"
                android:textAllCaps="true"
                app:layout_constraintLeft_toLeftOf="@id/text_life_years"
                app:layout_constraintRight_toRightOf="@id/text_life_years"
                app:layout_constraintTop_toBottomOf="@id/text_life_years" />

            <TextView
                style="@style/AppTheme.CaptionLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/months"
                android:textAllCaps="true"
                app:layout_constraintLeft_toLeftOf="@id/text_life_months"
                app:layout_constraintRight_toRightOf="@id/text_life_months"
                app:layout_constraintTop_toBottomOf="@id/text_life_months" />

            <TextView
                style="@style/AppTheme.CaptionLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/days"
                android:textAllCaps="true"
                app:layout_constraintLeft_toLeftOf="@id/text_life_days"
                app:layout_constraintRight_toRightOf="@id/text_life_days"
                app:layout_constraintTop_toBottomOf="@id/text_life_days" />

            <TextView
                style="@style/AppTheme.CaptionLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hours"
                android:textAllCaps="true"
                app:layout_constraintLeft_toLeftOf="@id/text_life_hours"
                app:layout_constraintRight_toRightOf="@id/text_life_hours"
                app:layout_constraintTop_toBottomOf="@id/text_life_hours" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:maxWidth="420dp"
            android:layout_gravity="center_horizontal">

            <TextView
                style="@style/ButtonSize"
                android:id="@+id/text_birthday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#F5F5F5"
                android:textAlignment="center"
                android:padding="8dp"
                android:layout_marginTop="32dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                style="@style/ButtonSize"
                android:id="@+id/text_today"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#F5F5F5"
                android:textAlignment="center"
                android:padding="8dp"
                android:layout_marginTop="32dp"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <View
                android:id="@+id/view_line_left"
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:background="@drawable/vector_dotted_line"
                app:layout_constraintLeft_toRightOf="@+id/text_birthday"
                app:layout_constraintRight_toLeftOf="@+id/text_birthday"
                app:layout_constraintTop_toBottomOf="@+id/text_birthday"
                app:layout_constraintBottom_toTopOf="@+id/view_div4" />

            <View
                android:id="@+id/view_line_right"
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:background="@drawable/vector_dotted_line"
                app:layout_constraintLeft_toRightOf="@+id/text_today"
                app:layout_constraintRight_toLeftOf="@+id/text_today"
                app:layout_constraintTop_toBottomOf="@+id/text_today"
                app:layout_constraintBottom_toTopOf="@+id/view_div4" />

            <View
                android:id="@+id/view_div1"
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:layout_marginTop="64dp"
                android:background="@color/colorText"
                app:layout_constraintLeft_toRightOf="@id/view_line_left"
                app:layout_constraintRight_toLeftOf="@id/view_line_right"
                app:layout_constraintTop_toBottomOf="@+id/text_today" />

            <View
                android:id="@+id/view_div2"
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:layout_marginTop="64dp"
                android:background="@color/colorText"
                app:layout_constraintLeft_toRightOf="@id/view_line_left"
                app:layout_constraintRight_toLeftOf="@id/view_line_right"
                app:layout_constraintTop_toBottomOf="@+id/view_div1" />

            <View
                android:id="@+id/view_div3"
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:layout_marginTop="64dp"
                android:background="@color/colorText"
                app:layout_constraintLeft_toRightOf="@id/view_line_left"
                app:layout_constraintRight_toLeftOf="@id/view_line_right"
                app:layout_constraintTop_toBottomOf="@+id/view_div2" />

            <View
                android:id="@+id/view_div4"
                android:layout_width="0dp"
                android:layout_height="0.5dp"
                android:layout_marginTop="64dp"
                android:background="@color/colorText"
                app:layout_constraintLeft_toRightOf="@id/view_line_left"
                app:layout_constraintRight_toLeftOf="@id/view_line_right"
                app:layout_constraintTop_toBottomOf="@+id/view_div3" />

            <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:id="@+id/text_years_of_life"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="#fff"
                android:clickable="true"
                app:layout_constraintRight_toLeftOf="@id/view_line_right"
                app:layout_constraintBottom_toTopOf="@+id/view_div1" />

            <Button
                style="@style/Widget.AppCompat.Button.Colored"
                android:id="@+id/text_months_of_life"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:textColor="#fff"
                android:clickable="true"
                app:layout_constraintRight_toLeftOf="@id/view_line_right"
                app:layout_constraintBottom_toTopOf="@+id/view_div2" />

            <TextView
                style="@style/ButtonSize"
                android:id="@+id/text_days_of_life"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingBottom="8dp"
                android:gravity="center"
                app:layout_constraintRight_toLeftOf="@id/view_line_right"
                app:layout_constraintBottom_toTopOf="@+id/view_div3" />

            <TextView
                style="@style/ButtonSize"
                android:id="@+id/text_hours_of_life"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingBottom="8dp"
                android:gravity="center"
                app:layout_constraintRight_toLeftOf="@id/view_line_right"
                app:layout_constraintBottom_toTopOf="@+id/view_div4" />

            <View
                android:layout_width="5dp"
                android:layout_height="5dp"
                android:background="@drawable/vector_circle"
                android:paddingLeft="5dp"
                app:layout_constraintRight_toRightOf="@id/text_birthday"
                app:layout_constraintLeft_toLeftOf="@id/text_birthday"
                app:layout_constraintTop_toTopOf="@id/view_div1"
                app:layout_constraintBottom_toBottomOf="@id/view_div1" />

            <View
                android:layout_width="5dp"
                android:layout_height="5dp"
                android:background="@drawable/vector_circle"
                app:layout_constraintRight_toRightOf="@id/text_birthday"
                app:layout_constraintLeft_toLeftOf="@id/text_birthday"
                app:layout_constraintTop_toTopOf="@id/view_div2"
                app:layout_constraintBottom_toBottomOf="@id/view_div2" />

            <View
                android:layout_width="5dp"
                android:layout_height="5dp"
                android:background="@drawable/vector_circle"
                app:layout_constraintRight_toRightOf="@id/text_birthday"
                app:layout_constraintLeft_toLeftOf="@id/text_birthday"
                app:layout_constraintTop_toTopOf="@id/view_div3"
                app:layout_constraintBottom_toBottomOf="@id/view_div3" />

            <View
                android:layout_width="5dp"
                android:layout_height="5dp"
                android:background="@drawable/vector_circle"
                app:layout_constraintRight_toRightOf="@id/text_birthday"
                app:layout_constraintLeft_toLeftOf="@id/text_birthday"
                app:layout_constraintTop_toTopOf="@id/view_div4"
                app:layout_constraintBottom_toBottomOf="@id/view_div4" />

            <View
                android:layout_width="5dp"
                android:layout_height="5dp"
                android:background="@drawable/vector_circle"
                app:layout_constraintRight_toRightOf="@id/text_today"
                app:layout_constraintLeft_toLeftOf="@id/text_today"
                app:layout_constraintTop_toTopOf="@id/view_div1"
                app:layout_constraintBottom_toBottomOf="@id/view_div1" />

            <View
                android:layout_width="5dp"
                android:layout_height="5dp"
                android:background="@drawable/vector_circle"
                app:layout_constraintRight_toRightOf="@id/text_today"
                app:layout_constraintLeft_toLeftOf="@id/text_today"
                app:layout_constraintTop_toTopOf="@id/view_div2"
                app:layout_constraintBottom_toBottomOf="@id/view_div2" />

            <View
                android:layout_width="5dp"
                android:layout_height="5dp"
                android:background="@drawable/vector_circle"
                app:layout_constraintRight_toRightOf="@id/text_today"
                app:layout_constraintLeft_toLeftOf="@id/text_today"
                app:layout_constraintTop_toTopOf="@id/view_div3"
                app:layout_constraintBottom_toBottomOf="@id/view_div3" />

            <View
                android:layout_width="5dp"
                android:layout_height="5dp"
                android:background="@drawable/vector_circle"
                app:layout_constraintRight_toRightOf="@id/text_today"
                app:layout_constraintLeft_toLeftOf="@id/text_today"
                app:layout_constraintTop_toTopOf="@id/view_div4"
                app:layout_constraintBottom_toBottomOf="@id/view_div4" />

            <TextView
                android:id="@+id/text_year"
                style="@style/AppTheme.CaptionLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="@string/years"
                android:textAllCaps="true"
                app:layout_constraintLeft_toRightOf="@+id/view_line_left"
                app:layout_constraintBottom_toTopOf="@+id/view_div1" />

            <TextView
                android:id="@+id/text_month"
                style="@style/AppTheme.CaptionLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="@string/months"
                android:textAllCaps="true"
                app:layout_constraintLeft_toRightOf="@+id/view_line_left"
                app:layout_constraintBottom_toTopOf="@+id/view_div2" />

            <TextView
                android:id="@+id/text_day"
                style="@style/AppTheme.CaptionLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="@string/days"
                android:textAllCaps="true"
                app:layout_constraintLeft_toRightOf="@+id/view_line_left"
                app:layout_constraintBottom_toTopOf="@+id/view_div3" />

            <TextView
                android:id="@+id/text_hour"
                style="@style/AppTheme.CaptionLight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:text="@string/hours"
                android:textAllCaps="true"
                app:layout_constraintLeft_toRightOf="@+id/view_line_left"
                app:layout_constraintBottom_toTopOf="@+id/view_div4" />

            <android.support.v4.widget.Space
                android:layout_width="match_parent"
                android:layout_height="32dp"
                app:layout_constraintTop_toBottomOf="@id/view_div4"
                app:layout_constraintBottom_toBottomOf="parent"/>

        </android.support.constraint.ConstraintLayout>

    </android.support.v4.widget.NestedScrollView>
</LinearLayout>